Fixed a bug where adjusting the speed slider incorrectly converted minutesPerTick to a string, which broke the breeding timer. Also made a minor CSS fix so message timestamps don't overlap awkwardly.

--- a/styles/style.css
+++ b/styles/style.css
@@ -92,6 +92,7 @@ body {
 	font-size: 10px;
 	vertical-align: text-bottom;
 	width: 30%;
+	clear: both;
 }
 
 .tooltipOverlay {
